dataset1235/2025-2/2868285114/users/756942405/executions/3649835072_2383239197.log
== SUBMISSION (2025-08-21 22:52:58)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 23:06:31)
-- CODE: 
import math

a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
soma = ((a**2) + (b**2)
cos = 2*a*b*math.cos(math.radians(angulo))
c = math.sqrt((soma)- (cos))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:54:15)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:54:13)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((a**2) + (b**2) - (2*a*b*(cos*angulo)))**1/2
                                   ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 23:07:29)
-- CODE: 
import math

a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
soma = ((a**2) + (b**2)
cos = 2*a*b*math.cos(math.radians(angulo))
c = math.sqrt((soma-cos))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:53:18)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:51:40)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = radians(input("angulo: "))
c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:51:54)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = radians(input("angulo: "))
c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo = radians(input("angulo: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 23:07:44)
-- CODE: 
import math

a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
soma = ((a**2) + (b**2))
cos = 2*a*b*math.cos(math.radians(angulo))
c = math.sqrt((soma-cos))
print(round(c, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
a: b: angulo: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
a: b: angulo: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
a: b: angulo: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
a: b: angulo: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
a: b: angulo: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
a: b: angulo: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:53:16)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 23:07:30)
-- CODE: 
import math

a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
soma = ((a**2) + (b**2)
cos = 2*a*b*math.cos(math.radians(angulo))
c = math.sqrt((soma-cos))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:52:19)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:52:25)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 23:07:27)
-- CODE: 
import math

a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
soma = ((a**2) + (b**2)
cos = 2*a*b*math.cos(math.radians(angulo))
c = math.sqrt((soma-cos))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 6
    soma = ((a**2) + (b**2)
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:53:20)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
                                       ~~~^~~~~~~
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:52:17)
-- CODE: 
from math import*
a = float(input("a: "))
b = float(input("b: "))
angulo = float(input("angulo: "))
c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.sqrt((a**2) + (b**2) - (2*a*b*(cos*angulo)))
        ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
